--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h5>The basic language of the web: HTML</h5>
     <h6>The basic language of the web: HTML</h6>
 -->
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
@@ -33,8 +33,8 @@
       <img
         src="./img/laura-jones.jpg"
         alt="Laura Jones"
-        width="50px"
-        height="50px"
+        width="75px"
+        height="75px"
       />
 
       <p id="author">Posted by Laura Jones on Monday, June 21st 2027</p>
